Get account members / keys (#869)
* Add /account.get_members & /account.get_keys

* Fix key membership tests

* Add tests for /account.get_keys

* Update Swagger
